--- a/iphone/res/ZBarSDK-Info.plist
+++ b/iphone/res/ZBarSDK-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleName</key>
-	<string>ZBarSDK</string>
+	<string>ATBarSDK</string>
 	<key>CFBundleVersion</key>
 	<string>1.3.1</string>
 	<key>CFBundleSignature</key>
